--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
+ul[role="list"],
+ol[role="list"] {
   list-style: none;
 }
 
@@ -58,9 +58,9 @@ select {
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
-   scroll-behavior: auto;
+    scroll-behavior: auto;
   }
-  
+
   *,
   *::before,
   *::after {
@@ -74,20 +74,21 @@ select {
 :root {
   /* colors */
   --clr-accent-400: hsl(12, 88%, 59%);
+  --clr-accent-300: hsl(12, 88%, 75%);
   --clr-accent-100: hsl(13, 100%, 96%);
 
   --clr-primary-400: hsl(228, 39%, 23%);
 
-  --clr-neautral-100: hsl(233, 12%, 13%);
-  --clr-neautral-900: hsl(0, 0%, 0%);
-  --clr-neautral-800: hsl(227, 12%, 61%);
-  --clr-neautral-700: hsl(0, 0%, 98%);
+  --clr-neutral-900: hsl(233, 12%, 13%);
+  --clr-neutral-100: hsl(0, 0%, 98%);
+  --clr-neutral-800: hsl(0, 0%, 0%);
+  --clr-neutral-200: hsl(227, 12%, 61%);
 
   /* font-families */
-  --ff-primary: 'Be Vietnam Pro', sans-serif;
+  --ff-primary: "Be Vietnam Pro", sans-serif;
 
-  --ff-body: var(--font-family-primary);
-  --ff-heading: var(--font-family-primary);
+  --ff-body: var(--ff-primary);
+  --ff-heading: var(--ff-primary);
 
   /* font-weights */
   --fw-regular: 400;
@@ -108,6 +109,16 @@ select {
   --fs-secondary-heading: var(--fs-700);
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-300);
+
+  --size-100: 0.25rem;
+  --size-200: 0.5rem;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
 }
 
 @media (min-width: 50em) {
@@ -159,22 +170,112 @@ select {
 }
 
 /* font weights */
-.fw-bold {font-weight: var(--fw-bold);}
-.fw-semi-bold {font-weight: var(--fw-semi-bold);}
-.fw-regular {font-weight: var(--fw-regular);}
+.fw-bold {
+  font-weight: var(--fw-bold);
+}
+.fw-semi-bold {
+  font-weight: var(--fw-semi-bold);
+}
+.fw-regular {
+  font-weight: var(--fw-regular);
+}
 
 /* font sizes */
 .fs-primary-heading {
   font-size: var(--fs-primary-heading);
+  line-height: 1.2;
 }
 .fs-secondary-heading {
   font-size: var(--fs-secondary-heading);
+  line-height: 1.1;
 }
 
-.fs-300 { font-size: var(--fs-300); }
-.fs-400 { font-size: var(--fs-400); }
-.fs-500 { font-size: var(--fs-500); }
-.fs-600 { font-size: var(--fs-600); }
-.fs-700 { font-size: var(--fs-700); }
-.fs-800 { font-size: var(--fs-800); }
-.fs-900 { font-size: var(--fs-900); }
+.fs-300 {
+  font-size: var(--fs-300);
+}
+.fs-400 {
+  font-size: var(--fs-400);
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-600 {
+  font-size: var(--fs-600);
+}
+.fs-700 {
+  font-size: var(--fs-700);
+}
+.fs-800 {
+  font-size: var(--fs-800);
+}
+.fs-900 {
+  font-size: var(--fs-900);
+}
+
+.padding-block-700 {
+  padding-block: var(--size-700);
+}
+.padding-block-900 {
+  padding-block: var(--size-900);
+}
+
+.container {
+  --max-width: 1110px;
+  --padding: 1rem;
+
+  width: min(var(--max-width), 100% - var(--padding) * 2);
+  margin-inline: auto;
+}
+
+.even-cols {
+  display: grid;
+  gap: 1rem;
+}
+
+@media (min-width: 50em) {
+  .even-cols {
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+  }
+}
+
+/* general styles */
+
+body {
+  font-size: var(--fs-body);
+  font-family: var(--ff-body);
+  color: var(--clr-primary-400);
+}
+
+/* button  */
+.button {
+  border: 0;
+  border-radius: 100vmax;
+  padding: 1.25em 2.5em;
+  line-height: 1;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-button);
+  cursor: pointer;
+  color: var(--clr-neutral-100);
+  background: var(--clr-accent-400);
+  text-decoration: none;
+  box-shadow: 0 1.125em 1em -1em var(--clr-accent-400);
+}
+
+.button:hover,
+.button:focus-visible {
+  background: var(--clr-accent-300);
+}
+
+.button[data-type="inverted"],
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible {
+  color: var(--clr-accent-400);
+  background: var(--clr-neutral-100);
+}
+
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible {
+  color: var(--clr-accent-300);
+}
+
