--- a/style.css
+++ b/style.css
@@ -134,6 +134,18 @@ select {
 }
 
 /* Utility classes */
+.hidden {
+  position: absolute;
+position: absolute !important;
+width: 1px !important;
+height: 1px !important;
+padding: 0 !important;
+margin: -1px !important;
+overflow: hidden !important;
+clip: rect(0,0,0,0) !important;
+white-space: nowrap !important;
+border: 0 !important;
+}
 
 /* text colors */
 .text-primary-400 {
@@ -279,3 +291,40 @@ body {
   color: var(--clr-accent-300);
 }
 
+/* nav  */
+.primary-header {
+  margin-top: var(--size-600);
+}
+
+.nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media (max-width: 50em) {
+  .primary-navigation {
+    display: none;
+  }
+
+  .mobile-nav-button {
+    display: block!important;
+  }
+}
+
+.mobile-nav-button {
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  padding: 0.5em;
+  display: none;
+}
+
+.mobile-nav-button .icon-close {
+  display: none;
+}
+
+.opened {
+  display: block;
+  position: fixed;
+}
