--- a/style.css
+++ b/style.css
@@ -133,6 +133,129 @@ select {
   }
 }
 
+
+
+/* general styles */
+
+body {
+  font-size: var(--fs-body);
+  font-family: var(--ff-body);
+  color: var(--clr-primary-400);
+}
+
+/* button  */
+.button {
+  display: inline-flex;
+  border: 0;
+  border-radius: 100vmax;
+  padding: 1.25em 2.5em;
+  line-height: 1;
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-button);
+  cursor: pointer;
+  color: var(--clr-neutral-100);
+  background: var(--clr-accent-400);
+  text-decoration: none;
+  box-shadow: 0 1.125em 1em -1em var(--clr-accent-400);
+}
+
+.button:hover,
+.button:focus-visible {
+  background: var(--clr-accent-300);
+}
+
+.button[data-type="inverted"],
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible {
+  color: var(--clr-accent-400);
+  background: var(--clr-neutral-100);
+}
+
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible {
+  color: var(--clr-accent-300);
+}
+
+/* nav  */
+.primary-header {
+  margin-top: var(--size-600);
+}
+
+.nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-list {
+  font-size: var(--fs-nav);
+  display: flex;
+  gap: clamp(var(--size-500), 5vw, var(--size-800));
+  font-weight: var(--fw-semi-bold);
+}
+
+.nav-list a {
+  color: var(--clr-primary-400);
+  text-decoration: none;
+}
+
+.nav-list a:hover,
+.nav-list a:focus {
+  color: var(--clr-accent-400);
+}
+
+@media (max-width: 50em) {
+  .primary-navigation {
+    display: none;
+    position: fixed;
+    inset: 7rem var(--size-400) auto;
+    max-width: 35rem;
+    margin-left: auto;
+    background: var(--clr-neutral-100);
+    border-radius: var(--size-100);
+    padding: var(--size-700);
+    box-shadow: 0 0 0.75em rgb(0, 0, 0, 0.05);
+  }
+
+  .primary-header[data-overlay]::before {
+    content: '';
+    position: fixed;
+    inset: 0;
+    background: linear-gradient(rgb(0 0 0 / 0), rgb(0 0 0 / 0.8));
+  }
+
+  .nav-list {
+    display: grid;
+    gap: var(--size-600);
+    text-align: center;
+    font-weight: var(--fw-bold);
+  }
+
+  .mobile-nav-button {
+    display: block!important;
+  }
+}
+
+.primary-navigation[data-visible] {
+  display: block;
+}
+
+.mobile-nav-button {
+  display: block;
+  position: fixed;
+  top: calc(var(--size-500) + 2px);
+  right: var(--size-600);
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  padding: 0.5em;
+  display: none;
+}
+
+.mobile-nav-button .icon-close {
+  display: none;
+}
+
 /* Utility classes */
 .hidden {
   position: absolute;
@@ -231,6 +354,16 @@ border: 0 !important;
   padding-block: var(--size-900);
 }
 
+.sm-none {
+    display: none;
+}
+
+@media (min-width: 50em) {
+  .md-inline-flex {
+    display: inline-flex;
+  } 
+}
+
 .container {
   --max-width: 1110px;
   --padding: 1rem;
@@ -249,82 +382,4 @@ border: 0 !important;
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
   }
-}
-
-/* general styles */
-
-body {
-  font-size: var(--fs-body);
-  font-family: var(--ff-body);
-  color: var(--clr-primary-400);
-}
-
-/* button  */
-.button {
-  border: 0;
-  border-radius: 100vmax;
-  padding: 1.25em 2.5em;
-  line-height: 1;
-  font-weight: var(--fw-bold);
-  font-size: var(--fs-button);
-  cursor: pointer;
-  color: var(--clr-neutral-100);
-  background: var(--clr-accent-400);
-  text-decoration: none;
-  box-shadow: 0 1.125em 1em -1em var(--clr-accent-400);
-}
-
-.button:hover,
-.button:focus-visible {
-  background: var(--clr-accent-300);
-}
-
-.button[data-type="inverted"],
-.button[data-type="inverted"]:hover,
-.button[data-type="inverted"]:focus-visible {
-  color: var(--clr-accent-400);
-  background: var(--clr-neutral-100);
-}
-
-.button[data-type="inverted"]:hover,
-.button[data-type="inverted"]:focus-visible {
-  color: var(--clr-accent-300);
-}
-
-/* nav  */
-.primary-header {
-  margin-top: var(--size-600);
-}
-
-.nav-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@media (max-width: 50em) {
-  .primary-navigation {
-    display: none;
-  }
-
-  .mobile-nav-button {
-    display: block!important;
-  }
-}
-
-.mobile-nav-button {
-  cursor: pointer;
-  background: transparent;
-  border: 0;
-  padding: 0.5em;
-  display: none;
-}
-
-.mobile-nav-button .icon-close {
-  display: none;
-}
-
-.opened {
-  display: block;
-  position: fixed;
 }
