--- a/style.css
+++ b/style.css
@@ -141,6 +141,15 @@ body {
   color: var(--clr-primary-400);
 }
 
+p:not([class]) {
+  opacity: 0.7;
+  max-width: 32ch;
+}
+
+p[data-width="wide"] {
+  max-width: 100%;
+}
+
 /* button  */
 .button {
   display: inline-flex;
