--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ select {
   --clr-neutral-900: hsl(233, 12%, 13%);
   --clr-neutral-100: hsl(0, 0%, 98%);
   --clr-neutral-800: hsl(0, 0%, 0%);
-  --clr-neutral-200: hsl(227, 12%, 61%);
+  --clr-neutral-200: hsl(0, 0%, 95%);
 
   /* font-families */
   --ff-primary: "Be Vietnam Pro", sans-serif;
@@ -143,13 +143,17 @@ body {
 
 p:not([class]) {
   opacity: 0.7;
-  text-align: center;
+}
+
+@media (max-width: 50em) {
+  p:not([class]) {
+    text-align: center;
+  }
 }
 
 @media (min-width: 50em) {
   p:not([class]) {
     max-width: 32ch;
-    text-align: start;
   }
 }
 
@@ -455,6 +459,156 @@ input[type="email"] {
   place-items: center;
 }
 
+/* slider */
+.slider {
+  display: flex;
+  gap: var(--size-600);
+  list-style: none;
+}
+
+.a11y-slider-container {
+  margin-block: var(--size-700);
+  margin-inline: var(--size-400);
+}
+
+.slider > * {
+  position: relative;
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+@media (min-width: 30em) {
+  .slider {
+    scroll-padding-inline: 25px;
+  }
+
+  .a11y-slider-container {
+    margin-inline: 0;
+  }
+  .slider > * {
+    width: 50%;
+  }
+}
+
+@media (min-width: 50em) {
+  .slider > * {
+    width: 35%;
+  }
+}
+
+.slider-content {
+  border-radius: var(--size-100);
+  padding: var(--size-700) var(--size-600) var(--size-600);
+  background: var(--clr-neutral-200);
+}
+
+.slider img {
+  width: var(--size-800);
+  position: relative;
+  top: calc(var(--size-800) / 2);
+  margin-inline: auto;
+}
+.a11y-slider-dots {
+  display: flex;
+  justify-content: center;
+  margin-block: var(--size-500);
+  gap: var(--size-300);
+}
+.a11y-slider-dots li {
+  display: block;
+  width: 12px;
+  height: 12px;
+  padding: 0;
+}
+
+.a11y-slider-dots li button {
+  display: block;
+  font-size: 0;
+  text-indent: -9999px;
+  background: transparent;
+  border: 1px solid var(--clr-accent-400) !important;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.a11y-slider-dots li button.active {
+  background: var(--clr-accent-400);
+}
+
+
+.slider p {
+  margin-inline: auto;
+}
+
+.a11y-slider-container {
+  position: relative;
+  direction: ltr;
+}
+.a11y-slider {
+  position: relative;
+  overflow: hidden;
+  -webkit-scroll-snap-type: x mandatory;
+  -ms-scroll-snap-type: x mandatory;
+  scroll-snap-type: x mandatory;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.a11y-slider::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+.a11y-slider > * {
+  scroll-snap-align: start;
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+.a11y-slider-sr-only,
+.a11y-slider-status {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+  text-align: center;
+  font-family: inherit;
+  font-size: 1em;
+}
+.a11y-slider-sr-only:focus {
+  position: static;
+  background: #000;
+  color: #fff;
+  width: 100%;
+  height: auto;
+  margin: 0;
+  clip: auto;
+  padding: 10px;
+}
+.a11y-slider-hide {
+  display: none;
+}
+.a11y-slider-scrolling {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+  -webkit-scroll-snap-type: none;
+  -ms-scroll-snap-type: none;
+  scroll-snap-type: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  scroll-behavior: auto;
+}
+
 /* Utility classes */
 .hidden {
   position: absolute;
@@ -625,4 +779,8 @@ input[type="email"] {
   .left-auto {
     margin-right: auto;
   }
+}
+
+.text-center {
+  text-align: center;
 }
